# xfce4-calculator-plugin

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.in  configure.in.in
icons/: Makefile.in
icons/48x48/: Makefile.am  Makefile.in
panel-plugin/: Makefile.am  Makefile.in  calctest.c  calculator.c  calculator.desktop.in.in  callgrind.out.4614  constants.h  eval.c  eval.h  gmon.out  grammar.txt  lexer.c  lexer.h  parser.c  parser.h  parsetree.c  parsetree.h  test-func.awk  test-minus.awk  test-pow.awk  test-simple-expr.awk
po/: POTFILES.in
